# test01

./: .gitignore  Dockerfile  HELP.md  README.md  ex1.txt  launches.json  pom.xml
.github/workflows/: buidl-image.yaml  checkout.yaml  data-mesh.yaml  data-product-ci.yaml  hello-world.yaml  reuse-workflow.yaml  run-kubectl.yaml  security-scan.yaml  tf-cloud-apply.yaml  tf-cloud-plan.yaml  tf-cloud.yaml  tf-multi-envs.yaml  tf-with-cache.yaml  wf-public.yaml
airflow-dag/: dag01.py  testing-dag.py
handson-datamesh/: contract_enforcer.py  requirements.txt
handson-datamesh/ex01/: products_team_v2.py  requirements.txt
handson-datamesh/ex01/init_scripts/: init.sql
handson-datamesh/ex02/: docker-compose.yaml
handson-datamesh/ex02/domains/orders/orders-completed/: dataproduct.yaml
handson-datamesh/ex02/domains/orders/orders-completed/docs/: README.md
handson-datamesh/ex02/domains/orders/orders-completed/quality/: expectations.yaml
handson-datamesh/ex02/platform/scripts/: deploy.sh  validate.sh
handson-datamesh/ex02/platform/templates/data-product-template/: dataproduct.yaml
python_codes/: Dockerfile  app.py
python_codes/python-alpine/: Dockerfile  pyproject.toml
python_codes/python-distroless/: .dockerignore  Dockerfile  app.py  gunicorn_config.py  repomix-output.xml
python_codes/python-simple/: repomix-output.xml
python_codes/python-w-pip/: Dockerfile
python_codes/python-w-uv/: Dockerfile  app.py  config.py  gunicorn_config.py  pyproject.toml
src/main/java/com/bosch/cmifexample/: CmifExampleApplication.java
src/main/resources/: application.yml
(+8 files in other folders)
